# Passive_pi_earn

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
passive/: helpers.py  main.py
tests/: test_passive.py
