[tool.poetry]
name = "Passive"
version = "0.1.0"
description = ""
authors = ["Anony Mous <anonymous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
pydantic = "^1.10.2"
pre-commit = "^2.20.0"
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
